--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-i18next": "^11.3.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "styled-icons": "^10.2.1"
   },
   "engines": {
     "node": "10.16.3"
