--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "i18next": "^19.3.2",
     "i18next-browser-languagedetector": "^4.0.2",
     "i18next-xhr-backend": "^3.2.2",
+    "mongodb": "^3.5.5",
     "prop-types": "^15.7.2",
+    "randomstring": "^1.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.3.3",
